--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -79,52 +79,8 @@ http {
   # for the check. It would be better to enable this in a location {} block for
   # a specific directory:
   # gzip_static on;
-
   gzip_disable        "MSIE [1-6]\.";
   gzip_vary           on;
 
-  server {
-    # listen 80 default_server deferred; # for Linux
-    # listen 80 default_server accept_filter=httpready; # for FreeBSD
-    listen 80 default_server;
-
-    # e.g. "localhost" to accept all connections, or "www.example.com"
-    # to handle the requests for "example.com" (and www.example.com)
-    # server_name www.example.com;
-
-    # Path for static files
-    root /sites/example.com/public;
-
-    #Specify a charset
-    charset utf-8;
-
-    # Custom 404 page
-    error_page 404 /404.html;
-
-    # This is pretty long expiry and assume your using
-    # cachebusting with query params like
-    #   <script src="application.js?20110529">
-    #
-    # Just be careful if your using this on a frequently
-    # updated static site. You may want to crank this back
-    # to 5m which is 5 minutes.
-    expires 1M; # yes one month
-
-    # Static assets
-    location ~* ^.+\.(manifest|appcache)$ {
-      expires -1;
-      access_log logs/static.log;
-    }
-
-    # Set expires max on static file types (make sure you are using cache busting filenames or query params):
-    location ~* ^.+\.(css|js|jpg|jpeg|gif|png|ico|gz|svg|svgz|ttf|otf|woff|eot|mp4|ogg|ogv|webm)$ {
-      expires max;
-      access_log off;
-    }
-
-    # opt-in to the future
-    add_header "X-UA-Compatible" "IE=Edge,chrome=1";
-
-  }
+  include /etc/nginx/sites-enabled/*;
 }
-
