Make include of enabled sites relative to the nginx directory (as of Nginx 0.6.7)

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -82,5 +82,5 @@ http {
   gzip_disable        "MSIE [1-6]\.";
   gzip_vary           on;
 
-  include /etc/nginx/sites-enabled/*;
+  include sites-enabled/*;
 }
